# public-transportation-routing-genetic-algorithm

./: .gitignore  Dockerfile  README.md  docker-compose.yml  example.json  pyproject.toml  requirements.txt  test.json
datasets/: 11_hight.json  11_low.json  32_hight_1.json  32_low.json  64_hight.json  64_low.json
src/: main.py  plotting.py  settings.py  test.py  ui.py
src/ga/: algorithm.py  stats.py  toolbox.py  utils.py
