[project]
name = "public-transportation-routing-genetic-algorithm"
version = "0.1.0"
description = ""
authors = [
    {name = "Starodubov Maxim",email = "tofumaks@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deap (>=1.4.2,<2.0.0)",
    "streamlit (>=1.44.1,<2.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "networkx (>=3.4.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false


[tool.pyright]
executionEnvironments = [
    { root = "src/ga",  reportAttributeAccessIssue = false },
    { root = "." }
]
